# quuga-backend-lambda

./: template.yaml
app/: Cargo.toml
app/src/: lib.rs  main.rs
app/src/application/video/: usecase.rs
app/src/application/video/usecase/: get_video.rs
app/src/domain/: video.rs
app/src/domain/video/: entity.rs  infrastructure.rs  mod.rs  usecase.rs
app/src/domain/video/entity/: video_entity.rs
app/src/domain/video/repository/: video_repository.rs
app/src/infrastructure/persistence/: video.rs
app/src/infrastructure/persistence/video/: in_memory_repo.rs
app/src/presentation/: http.rs
app/src/presentation/http/: handler.rs  router.rs  state.rs
app/src/presentation/http/handler/: get_video_handler.rs
