[package]
name = "rust-lambda-axum"
version = "0.1.0"
edition = "2021"

[dependencies]
# Axum Webフレームワーク
axum = "0.7"

# Lambda統合
lambda_http = "0.13"

# 非同期ランタイム
tokio = { version = "1", features = ["macros"] }

# JSONシリアライゼーション
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# ログ
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }

# HTTP utilities
tower = "0.5"

anyhow = "1.0"
async-trait = "0.1"
uuid = { version = "1.6", features = ["v4", "serde"] }